--- a/nuxt-contentful-blog/assets/scss/base/_setting.scss
+++ b/nuxt-contentful-blog/assets/scss/base/_setting.scss
@@ -44,7 +44,7 @@ $radius : 10px;
 $radius-s : 5px;
 
 //シャドウ
-$shadow : 0 0 15px rgba(#1c5159,0.15);
+$shadow : 0 0 20px rgba(#2e7580,0.4);
 
 //アニメーション
 $transition : all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
