--- a/nuxt-contentful-blog/assets/scss/style.scss
+++ b/nuxt-contentful-blog/assets/scss/style.scss
@@ -7,6 +7,7 @@
 @import "base/common";//bodyなどの設定？
 
 //パーツ・コンポーネント
+@import "components/header";//ヘッダー
 @import "components/title";//見出し
 @import "components/button";//ボタン
 @import "components/alert";//アラートメッセージ
