--- a/nuxt-contentful-blog/assets/scss/components/_header.scss
+++ b/nuxt-contentful-blog/assets/scss/components/_header.scss
@@ -1,30 +1,19 @@
 /*********************************************/
 /* Components header */
 /*********************************************/
-.l-all {
-	&.is-fixed {
-		#l-header {
-			position: fixed;
-			top: 0;
-			left: 0;
-			right: 0;
-			display: flex;
-			flex-wrap: wrap;
-			padding-top: 0px;
-			padding-bottom: 0px;
-			width: 100%;
-			background: rgba(#ffffff, 0.8);
-		}
-	}
-}
 #l-header {
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 10;
 	background: #ffffff;
 	height: 60px;
 	box-shadow: 0 0 5px rgba(0,0,0,0.2);
+	@include media(sp) {
+		height: auto;
+		min-height: 60px;
+	}
 }
 .l-header-in {
 	display: flex;
@@ -34,6 +23,12 @@
 	margin: 0 auto;
 	padding: 8px 15px 0 15px;
 	width: 990px;
+	@include media(sp) {
+		display: block;
+		position: relative;
+		padding: 5px 15px 0 15px;
+		width: auto;
+	}
 }
 .g-logo {
 	font-size: rem(30px);
@@ -41,11 +36,33 @@
 	font-weight: 900;
 	color: #000000;
 	text-align: center;
+	@include media(sp) {
+		font-size: rem(21px);
+	}
 }
 
+.g-main-navi-wrap {
+	@include media(sp) {
+		display: none;
+		&.is-active {
+			display: block;
+			position: fixed;
+			z-index: 100;
+			background: $main-color;
+			height: 100%;
+			width: 100%;
+		}
+	}
+	@include media(min-sp) {//SPで閉じてPCに戻したときナビを表示
+		display: block !important;
+	}
+}
 .g-main-navi-list {
 	display: flex;
 	flex-wrap: wrap;
+	@include media(sp) {
+		display: block;
+	}
 }
 .g-main-navi-list__item {
 	margin-left: 40px;
@@ -81,8 +98,50 @@
 	display: none;
 	@include media(sp) {
 		display: block;
+		position: absolute;
+		top: 5px;
+		right: 5px;
+		z-index: 1000;
+		width: 45px;
+		height: 45px;
+		cursor: pointer;
+		& span {
+			width: 100%;
+			height: 2px;
+			background: #000;
+			display: block;
+			transition: .6s;
+			position: absolute;
+			&:first-child {
+				top: 0;
+			}
+			&:nth-child(2) {
+				top: 14px;
+			}
+			&:last-child {
+				bottom: 0;
+			}
+		}
+		&.is-active {
+			span {
+				transition: $transition;
+				&:first-child {
+					transform: rotate(45deg);
+					top: 50%;
+				}
+				&:nth-child(2) {
+					opacity: 0;
+				}
+				&:last-child {
+					transform: rotate(-45deg);
+					top: 50%;
+				}
+			}
+		}
 	}
 }
+
+
 .g-main-navi-btn-close {
 	display: none;
 	@include media(sp) {
