--- a/nuxt-contentful-blog/assets/scss/components/_header.scss
+++ b/nuxt-contentful-blog/assets/scss/components/_header.scss
@@ -26,7 +26,7 @@
 	@include media(sp) {
 		display: block;
 		position: relative;
-		padding: 5px 15px 0 15px;
+		padding: 15px 15px 0 15px;
 		width: auto;
 	}
 }
@@ -39,16 +39,29 @@
 	@include media(sp) {
 		font-size: rem(21px);
 	}
+	& a {
+		color: #000000;
+		text-decoration: none;
+		&:hover {
+			text-decoration: none;
+		}
+	}
 }
 
 .g-main-navi-wrap {
 	@include media(sp) {
 		display: none;
+		transition: $transition;
 		&.is-active {
-			display: block;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
 			position: fixed;
+			top: 0;
+			left: 0;
 			z-index: 100;
-			background: $main-color;
+			background: rgba($main-color,0.95);
 			height: 100%;
 			width: 100%;
 		}
@@ -69,6 +82,13 @@
 	font-size: rem(21px);
 	font-weight: 900;
 	font-style: italic;
+	@include media(sp) {
+		margin-left: 0;
+		margin-top: 15px;
+		margin-bottom: 15px;
+		text-align: center;
+		font-size: rem(30px);
+	}
 }
 .g-main-navi-list__link {
 	position: relative;
@@ -77,6 +97,9 @@
 	&.nuxt-link-exact-active {
 		color: $main-color;
 		text-decoration: none;
+		@include media(sp) {
+			color: #ffffff;
+		}
 	}
 	&.nuxt-link-exact-active {
 		&:before {
@@ -99,32 +122,36 @@
 	@include media(sp) {
 		display: block;
 		position: absolute;
-		top: 5px;
+		top: 8px;
 		right: 5px;
 		z-index: 1000;
 		width: 45px;
 		height: 45px;
+		border: none;
+		background: transparent;
 		cursor: pointer;
 		& span {
-			width: 100%;
-			height: 2px;
-			background: #000;
-			display: block;
-			transition: .6s;
 			position: absolute;
+			display: block;
+			left: 50%;
+			margin-left: -12px;
+			width: 25px;
+			height: 3px;
+			background: $main-color;
+			transition: $transition;
 			&:first-child {
-				top: 0;
+				top: 10px;
 			}
 			&:nth-child(2) {
-				top: 14px;
+				top: 20px;
 			}
 			&:last-child {
-				bottom: 0;
+				bottom: 10px;
 			}
 		}
 		&.is-active {
 			span {
-				transition: $transition;
+				background: #ffffff;
 				&:first-child {
 					transform: rotate(45deg);
 					top: 50%;
