--- a/nuxt-contentful-blog/assets/scss/style.scss
+++ b/nuxt-contentful-blog/assets/scss/style.scss
@@ -14,5 +14,7 @@
 @import "components/table";//テーブル
 @import "components/pager";//ページャー
 
+@import "pages/pages";
+
 @import "base/utility";//余白など便利なスタイル
 
