--- a/nuxt-contentful-blog/assets/scss/base/_setting.scss
+++ b/nuxt-contentful-blog/assets/scss/base/_setting.scss
@@ -45,6 +45,7 @@ $radius-s : 5px;
 
 //シャドウ
 $shadow : 0 0 20px rgba(#2e7580,0.4);
+$shadow-light : 0 0 20px rgba(#2e7580,0.1);
 
 //アニメーション
 $transition : all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
