--- a/nuxt-contentful-blog/assets/scss/components/_title.scss
+++ b/nuxt-contentful-blog/assets/scss/components/_title.scss
@@ -20,15 +20,9 @@
 .c-ttl-sub-s {
 	position: relative;
 	margin-bottom: 30px;
-	padding-left: 25px;
-	border-left: 1px solid $main-color;
 	font-size: rem(18px);
+	font-weight: bold;
 	color: #000000;
-	line-height: 1.4;
-	@include media(sp) {
-		margin-bottom: 20px;
-		padding-left: 15px;
-	}
 }
 .c-lead {
 	margin-bottom: 45px;
