contentfulのパス間違いの書き換え（generateできなかったのを解決） その他CSS調整

--- a/nuxt-contentful-blog/assets/scss/base/_common.scss
+++ b/nuxt-contentful-blog/assets/scss/base/_common.scss
@@ -13,7 +13,7 @@ body {
 	min-width: 1050px;
 	font-size: $font-size-pc;
 	font-family: $gothic;
-	background: $base-color;
+	background: rgba($base-color, 0.9);
 	color: $txt-main;
 	word-wrap: break-word;
 	letter-spacing: 0.05em;
