--- a/nuxt-contentful-blog/assets/scss/components/_button.scss
+++ b/nuxt-contentful-blog/assets/scss/components/_button.scss
@@ -8,7 +8,7 @@
 	border-radius: 30px;
 	min-width: 210px;
 	line-height: 1.4;
-	background: transparent;
+	background: #ffffff;
 	color: #000000;
 	font-size: rem(21px);
 	cursor: pointer;
@@ -19,7 +19,7 @@
 	@include arrow-link-right(20,10,2,$main-color);
 	&:hover {
 		border-color:$accent-color;
-		background-color: transparent;
+		background-color: #ffffff;
 		color: #000000;
 		box-shadow: $shadow;
 		cursor: pointer;
