--- a/nuxt-contentful-blog/assets/scss/pages/_pages.scss
+++ b/nuxt-contentful-blog/assets/scss/pages/_pages.scss
@@ -39,7 +39,7 @@
 	padding: 20px;
 	border-top: 1px solid #eeeeee;
 	@include media(sp) {
-		padding: 10px;
+		padding: 20px 15px;
 	}
 }
 .p-works-list__ttl {
